Download complete center aligned - fixed

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -2751,3 +2751,5 @@ html body .resource_wrap { padding-bottom:8% !important;}
  .bycourse-temp #exportdiv { float:right; clear:none !important;}
 }
 
+.prog-summarys.download { text-align:center; padding-bottom:10px;}
+
